--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "pre-commit": "^1.2.0",
     "socket.io": "^1.7.1",
     "socket.io-client": "^1.7.1",
-    "stream-equal": "^0.1.12",
-    "stream-http": "^2.3.1"
+    "stream-equal": "^0.1.12"
   },
   "pre-commit": [
     "lint",
