--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "gulp": "^3.9.1",
     "hapi": "^16.0.1",
     "interface-ipfs-core": "^0.22.1",
-    "ipfsd-ctl": "^0.17.0",
+    "ipfsd-ctl": "https://github.com/haadcode/js-ipfsd-ctl.git",
     "js-base64": "^2.1.9",
     "pre-commit": "^1.2.0",
     "socket.io": "^1.7.1",
